[gd_scene load_steps=3 format=3 uid="uid://b8hniu3f6w3v0"]

[ext_resource type="PackedScene" uid="uid://blfjihrm0y4ub" path="res://scenes/casur_cat.glb" id="1"]
[ext_resource type="Script" uid="uid://jcoxxws3n8i1" path="res://scripts/targets_cat.gd" id="3"]

[node name="cat_model" instance=ExtResource("1")]
script = ExtResource("3")

[node name="ik_backL" type="SkeletonIK3D" parent="metarig/Skeleton3D" index="1"]
process_priority = 1
root_bone = &"thigh.L"
tip_bone = &"r_toe.L"
use_magnet = true
target_node = NodePath("../../t_backL")

[node name="ik_backR" type="SkeletonIK3D" parent="metarig/Skeleton3D" index="2"]
process_priority = 1
root_bone = &"thigh.R"
tip_bone = &"r_toe.R"
use_magnet = true
target_node = NodePath("../../t_backR")

[node name="ik_frontL" type="SkeletonIK3D" parent="metarig/Skeleton3D" index="3"]
process_priority = 1
root_bone = &"shoulder.L"
tip_bone = &"f_toe.L"
use_magnet = true
target_node = NodePath("../../t_frontL")

[node name="ik_frontR" type="SkeletonIK3D" parent="metarig/Skeleton3D" index="4"]
process_priority = 1
root_bone = &"shoulder.R"
tip_bone = &"f_toe.R"
use_magnet = true
target_node = NodePath("../../t_frontR")

[node name="t_backL" type="Marker3D" parent="metarig" index="1"]

[node name="t_backR" type="Marker3D" parent="metarig" index="2"]

[node name="t_frontL" type="Marker3D" parent="metarig" index="3"]

[node name="t_frontR" type="Marker3D" parent="metarig" index="4"]
